--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = myremote
+    remote = storage
 ['remote "myremote"']
     url = /tmp/dvc
+['remote "storage"']
+    url = gdrive://1D3XIpRLpqfKDorODlEMfapfTri-ZgvAX
