Add metrics.json as metrics in dvc.yaml

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -52,5 +52,8 @@ stages:
     params: 
     - evaluate
     outs:
-    - reports/metrics.json
     - reports/confusion_matrix.png
+    metrics:
+    - reports/metrics.json:
+        cache: false
+
