--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,7 @@
 stages:
+
   data_load:
-    cmd: python3.7 src/stages/data_load.py --config=params.yaml
+    cmd: python src/stages/data_load.py --config=params.yaml
     deps:
     - src/stages/data_load.py
     params:
@@ -10,12 +11,13 @@ stages:
     - data/raw/iris.csv
 
   featurize:
-    cmd: python3.7 src/stages/featurize.py --config=params.yaml
+    cmd: python src/stages/featurize.py --config=params.yaml
     deps:
-    - src/stages/featurize.py
     - data/raw/iris.csv
+    - src/stages/featurize.py
     params:
     - base
+    - data_load
     - featurize
     outs:
     - data/processed/featured_iris.csv
@@ -40,20 +42,25 @@ stages:
     - src/stages/train.py
     params:
     - base
+    - data_split.trainset_path
+    - featurize.target_column
     - train
     outs:
     - models/model.joblib
-  
+
   evaluate:
     cmd: python src/stages/evaluate.py --config=params.yaml
     deps:
     - data/processed/test_iris.csv
+    - models/model.joblib
     - src/stages/evaluate.py
-    params: 
+    params:
+    - base
+    - data_split.testset_path
     - evaluate
+    - featurize.target_column
     outs:
     - reports/confusion_matrix.png
     metrics:
     - reports/metrics.json:
         cache: false
-
